# AldricBot

./: .env.sample  .gitignore  CLAUDE.md  CLAUDE.md.j2  ClaudeBot.lua  ClaudeBot.toc  GENERIC_LLM_PLAN.md  INSTALL.md  PLAN-persona-templating.md  README.md  daemon.py  install.py  persona_prompt.md.j2  pw  pyproject.toml
AldricBotAddon/: AldricBotAddon.lua  AldricBotAddon.toc
aldricbot/: calendar.py  chat_handler.py  config.py  events.py  input_control.py  lua_io.py  memory.py  persona.py  trade_handler.py
mcp_server/: input_control.py  lua_io.py  server.py
personas/: aldric.yaml  class_personalities.yaml
tests/: conftest.py  test_calendar.py  test_chat_handler.py  test_daemon.py  test_dispatcher.py  test_event_handlers.py  test_lua_io.py  test_memory.py  test_parse_command.py  test_persona.py  test_trade_handler.py
