[project]
name = "aldricbot"
version = "0.1.0"
description = "WoW RP chat bot daemon for ChromieCraft (WotLK 3.3.5a)"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aldricbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
